tests/ui/ergonomic-clones/closure/mutation2.stderr
error[E0596]: cannot borrow `callback` as mutable, as it is not declared as mutable
  --> $DIR/mutation2.rs:9:5
   |
LL |         my_var = true;
   |         ------ calling `callback` requires mutable binding due to possible mutation of `my_var`
LL |     };
LL |     callback();
   |     ^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut callback = use || {
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
